# math

./: .gitignore  CMakeLists.txt  README.md  build.py  build.zsh  build_fortran.py  main.f90  test.py
1/: test  test.f90  test1.f90
fortran/: kadai1.f90  kadai3.f90  kadai5.f90  kadai6.f90  kadai7.f90  kadai_20250102.f90  main.f90  sample2_4.f90  sample4_2.f90
src/: CMakeLists.txt  kadai1.f90  kadai11.c  kadai12.c  kadai13.c  kadai14.c  kadai15.c  kadai16.c  kadai2.f90  kadai3.f90  kadai4.f90  kadai5.f90  kadai7.f90  kadai8.c  main.f90  sample2_1.f90  sample2_3.f90  sample2_4.f90  sample3_5.f90  sample4_1.f90  test.f90  test1  test1.f90
